Refactored Testtool into tests